# payment_engine

./: Cargo.toml  README.md  accounts.csv  tarpaulin-report.html  transactions.csv
src/: errors.rs  lib.rs  main.rs
src/core/: engine.rs  mod.rs  wallet.rs  worker.rs
src/input/: csv.rs  mod.rs  reader.rs  row.rs
src/model/: account.rs  client.rs  mod.rs  report.rs  trade.rs
tests/: chargeback_tests.rs  csv_reader_tests.rs  deposit_tests.rs  dispute_tests.rs  end_to_end_test.rs  resolve_tests.rs  withdrawal_tests.rs
