[package]
name = "payment_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
tracing = "0.1.41"
thiserror = "2.0.17"
tracing-log = "0.2.0"
rust_decimal = "1.39"
tracing-subscriber = "0.3.20"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.100"
tempfile = "3.23.0"
rust_decimal_macros = "1.39.0"